--- a/server/model-config.json
+++ b/server/model-config.json
@@ -74,5 +74,9 @@
   "demographic_profile": {
     "dataSource": "geomarketingdb",
     "public": true
+  },
+  "aksjd": {
+    "dataSource": "db",
+    "public": true
   }
 }
