--- a/client-src/package.json
+++ b/client-src/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "4.1.1",
     "core-js": "^2.5.4",
     "feather-icons": "^4.7.3",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "rxjs": "^6.0.0",
     "tether": "^1.4.4",
