--- a/client-src/package.json
+++ b/client-src/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
     "@auth0/angular-jwt": "^2.0.0",
+    "@turf/turf": "^5.1.6",
     "@types/leaflet": "^1.2.7",
     "bootstrap": "4.1.1",
     "core-js": "^2.5.4",
