--- a/client-src/package.json
+++ b/client-src/package.json
@@ -23,11 +23,13 @@
     "@auth0/angular-jwt": "^2.0.0",
     "@turf/turf": "^5.1.6",
     "@types/leaflet": "^1.2.7",
+    "@types/leaflet-draw": "^0.4.13",
     "bootstrap": "4.1.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "leaflet": "^1.3.1",
+    "leaflet-draw": "^1.0.2",
     "rxjs": "^6.0.0",
     "tether": "^1.4.4",
     "zone.js": "^0.8.26"
