--- a/client-src/angular.json
+++ b/client-src/angular.json
@@ -27,14 +27,14 @@
               "./node_modules/bootstrap/dist/css/bootstrap.css",
               "./node_modules/font-awesome/css/font-awesome.css",
               "./node_modules/leaflet/dist/leaflet.css",
-              "./node_modules/leaflet-draw/dist/leaflet.draw-src.css"
+              "./node_modules/leaflet-draw/dist/leaflet.draw.css"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.js",
               "./node_modules/tether/dist/js/tether.js",
               "./node_modules/bootstrap/dist/js/bootstrap.js",
               "./node_modules/leaflet/dist/leaflet.js",
-              "./node_modules/leaflet-draw/dist/leaflet.draw-src.js"
+              "./node_modules/leaflet-draw/dist/leaflet.draw.js"
             ]
           },
           "configurations": {
